Clone postgis module without geometry support named tablenogeom, configured connection between resources.

--- a/nextgisweb/pyramid/nodepkg/layout/Avatar.less
+++ b/nextgisweb/pyramid/nodepkg/layout/Avatar.less
@@ -13,11 +13,11 @@
         vertical-align: middle;
         border-radius: 2px;
         background: var(--primary);
-        width: 32px;
-        height: 32px;
+        width: 24px;
+        height: 24px;
         color: var(--on-primary-text);
-        font-size: 20px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 24px;
         text-align: center;
     }
 }
@@ -30,36 +30,28 @@
 }
 
 .ngw-pyramid-avatar-popover {
-    .ant-popover-content {
-        > .ant-popover-inner {
-            padding: 1ex;
+    .ant-popover-title {
+        padding: 6px 12px;
+        font-weight: 500;
+    }
 
-            .ant-popover-title {
-                padding: 4px 8px;
-                font-weight: bold;
-            }
+    .ant-popover-inner-content {
+        padding: 0px;
 
-            .ant-popover-inner-content {
-                display: flex;
-                flex-direction: column;
-                gap: 1ex;
-                padding: 0px;
+        div.warning {
+            display: block;
+            background-color: var(--surface-bg-danger);
+            padding: 6px 12px;
+        }
 
-                div.warning {
-                    background-color: var(--surface-bg-danger);
-                    padding: 4px 8px;
-                }
+        a {
+            display: block;
+            padding: 6px 12px;
+            color: var(--text-base);
+            text-decoration: none;
 
-                a {
-                    display: block;
-                    padding: 4px 8px;
-                    color: var(--text-base);
-                    text-decoration: none;
-
-                    &:hover {
-                        background-color: rgba(0, 0, 0, 0.04);
-                    }
-                }
+            &:hover {
+                background-color: rgba(0, 0, 0, 0.04);
             }
         }
     }
