--- a/nextgisweb/static/css/variables.less
+++ b/nextgisweb/static/css/variables.less
@@ -1,6 +1,6 @@
 :root {
     // Colors
-    --primary: #076dbf;
+    --primary: #106a90;
     --secondary: #e5eef7;
     --accent: #00c775;
     --danger: #f44336;
