--- a/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
@@ -4,13 +4,19 @@
     flex-direction: column;
 
     &.checkable {
-        margin-left: -22px;
+        margin-left: -4px;
     }
 
     &.uncheckable {
-        margin-left: 0px;
+        margin-left: 0;
     }
 
+    .legend-item {
+        display: flex;
+        align-items: center;
+        margin-left: 7px;
+    }
+    
     > .legend-symbol {
         display: flex;
         column-gap: 6px;
@@ -21,13 +27,22 @@
 
         > .ant-checkbox-wrapper {
             align-self: start;
-            scale: 0.75;
         }
 
         > .legend-title {
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
+        }
+
+        .ant-checkbox-checked .ant-checkbox-inner {
+            border-color: #d9d9d9;
+            border: dotted #d9d9d9 0.005em;
+        }
+
+        .ant-checkbox .ant-checkbox-inner {
+            border-color: #d9d9d9;
+            border: dotted #d9d9d9 0.005em;
         }
     }
 }
