--- a/nextgisweb/webmap/nodepkg/panel/identification/IdentificationPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/identification/IdentificationPanel.less
@@ -24,6 +24,20 @@
         }
     }
 
+    .header-relation-block {
+        display: flex;
+        justify-content: space-between;
+
+        .label {
+            padding: 0 5px;
+        }
+    }
+
+    .relation-item {
+        display: flex;
+        flex-direction: column;
+    }
+
     .bottom {
         flex-shrink: 0;
         margin-top: auto;
