test output of related data in the identification panel,  revision

--- a/nextgisweb/webmap/nodepkg/panel/diagram/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/GraphPanel.less
@@ -1,6 +1,14 @@
-.build-graph {
-    width: 150px;
-    margin: 0 0 5px 0;
+.graph {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.button-graph {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 10px 0;
 }
 
 .relation-item {
