added button build graph for identify_module popup

--- a/nextgisweb/webmap/nodepkg/panel/diagram/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/GraphPanel.less
@@ -5,10 +5,22 @@
     width: 100%;
 }
 
+.right-graph {
+    display: flex;
+    justify-content: flex-end;
+    border-bottom: 1px dotted var(--divider-color);
+}
+
 .button-graph {
     display: flex;
     justify-content: space-between;
     margin: 0 0 10px 0;
+}
+
+.right-button-graph {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
 }
 
 .relation-item {
