--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -158,10 +158,26 @@
             z-index: 1000;
 
             &:hover {
-                background-color: rgba(0,0,0,.02);
+                background-color: #00000010;
                 color: var(--primary);
                 border-radius: 2px;
             }
+        }
+
+        .icon-disabled {
+            font-size: 16px;
+            width: 22px;
+            height: 22px;
+            display: flex;
+            justify-items: center;
+            justify-content: center;
+            align-items: center;
+            flex: 0 0 auto;
+            margin: 0 0 0 4px;
+            cursor: pointer;
+            color: var(--text-secondary);
+            z-index: 1000;
+            pointer-events: none;
         }
     }
 
@@ -336,7 +352,7 @@
 
         &:hover {
             color: var(--primary);
-            background-color: rgba(0,0,0,.02);
+            background-color: rgba(0, 0, 0, .02);
             border-radius: 3px;
         }
 
@@ -362,7 +378,7 @@
 
         &:hover {
             color: var(--primary);
-            background-color: rgba(0,0,0,.02);
+            background-color: rgba(0, 0, 0, .02);
             border-radius: 3px;
         }
     }
@@ -445,4 +461,17 @@
 .error-component {
     display: flex;
     justify-content: center;
+}
+
+.ant-tag-checkable-checked {
+    color: var(--primary);
+}
+
+.ant-tag {
+    margin-inline-end: 0;
+    padding-inline: 4px;
+}
+
+.ant-tag-checkable-checked {
+    background-color: #ffffff00;
 }
