settings legend graph for popup identify module

--- a/nextgisweb/webmap/nodepkg/panel/diagram/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/diagram/GraphPanel.less
@@ -30,18 +30,15 @@
 }
 
 .legend-hide-button {
-    display: inline-flex;
-    justify-content: flex-end;
-    padding: 0 5px;
-    position: absolute;
-    right: 0;
+    right: 2px;
+    margin: 2px auto;
     border-radius: 2px;
     border: 1px solid var(--divider-color);
-    background: rgb(255 255 255);
+    background: #ffffff;
     z-index: 1000;
 
     &:hover {
-        background-color: var(--icon-color) !important;
+        background-color: #00000010 !important;
         color: var(--primary) !important;
         border-radius: 2px !important;
         z-index: 1000 !important;
