--- a/nextgisweb/webmap/amd/ngw-webmap/tool/resources/Identify.css
+++ b/nextgisweb/webmap/amd/ngw-webmap/tool/resources/Identify.css
@@ -13,35 +13,28 @@
 .ngwWebmapToolIdentify-controller .dijitToggleButton .dijitButtonNode,
 .ngwWebmapToolIdentify-controller .dijitButton .dijitButtonNode {
     border-radius: 0;
-    padding: 1px;
-    height: 20px;
+    padding: 0px;
+    height: 24px;
+    font-size: 18px;
+    border: 0;
+    box-shadow: none;
+    width: 40px;
 }
 
-.ngwWebmapToolIdentify-controller
-    .dijitToggleButton:first-child
-    .dijitButtonNode,
+.ngwWebmapToolIdentify-controller .dijitToggleButton:first-child .dijitButtonNode,
 .ngwWebmapToolIdentify-controller .dijitButton:first-child .dijitButtonNode {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
+    border-radius: 3px;
 }
 
-.ngwWebmapToolIdentify-controller
-    .dijitToggleButton:last-child
-    .dijitButtonNode,
+.ngwWebmapToolIdentify-controller .dijitToggleButton:last-child .dijitButtonNode,
 .ngwWebmapToolIdentify-controller .dijitButton:last-child .dijitButtonNode {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
 
-.ngwWebmapToolIdentify-controller
-    .dijitToggleButton
-    .dijitButtonNode
-    .dijitButtonText,
-.ngwWebmapToolIdentify-controller
-    .dijitButton
-    .dijitButtonNode
-    .dijitButtonText {
-    padding: 1px 2px;
+.ngwWebmapToolIdentify-controller .dijitToggleButton .dijitButtonNode .dijitButtonText,
+.ngwWebmapToolIdentify-controller .dijitButton .dijitButtonNode .dijitButtonText {
+    padding: 0;
 }
 
 /* На кнопках без подписи прячем элемент подписи совсем */
@@ -72,4 +65,65 @@
 
 .ngwPopup__features {
     border-bottom: 1px solid #efefef;
+}
+
+.dijitHidden {
+    position: absolute;
+    display: none;
+}
+
+.claro .dijitToggleButtonChecked .dijitButtonNode {
+    background-color: #ffffff00;
+    color: var(--primary);
+}
+
+.claro .dijitToggleButton .dijitButtonNode {
+    background-image: none;
+    background-color: #ffffff00;
+}
+
+.dijitButton,
+.dijitComboButton,
+.dijitDropDownButton,
+.dijitToggleButton {
+    margin: 0;
+    vertical-align: middle;
+}
+
+.claro .dijitButton .dijitButtonNode {
+    background-color: #ffffff00;
+    background-image: none;
+}
+
+.claro .dijitButtonHover .dijitButtonNode {
+    background-color: #ffffff00;
+    background-image: none;
+}
+
+.custom-popup-button {
+    background-color: #ffffff00;
+    width: 40px;
+    height: 24px;
+}
+
+.custom-popup-button:hover {
+    background-color: #acacac20;
+    border-radius: 3px;
+}
+
+.ngwWebmapToolIdentify-controller .dijitToggleButton:hover {
+    background-color: #ffffff00;
+    border-radius: 3px;
+}
+
+.nextgis.claro .dijitButton:hover:before {
+    background-color: #ffffff00;
+    opacity: 0;
+}
+
+.other-style {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    border-bottom: solid #eeeeee 0.005em;
 }
