--- a/nextgisweb/webmap/nodepkg/identify-module/component/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/component/GraphPanel.less
@@ -30,17 +30,28 @@
 }
 
 .legend-hide-button {
-    right: 2px;
-    margin: 2px auto;
-    border-radius: 2px;
-    border: 1px solid var(--divider-color);
-    background: #ffffff;
+    font-size: 16px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    margin: 0;
+    cursor: pointer;
+    color: var(--text-secondary);
     z-index: 1000;
+    border-radius: 3px;
+    border: 1px solid var(--divider-color);
+    background-color: #ffffff00;
+    box-sizing: border-box;
+    margin-inline-start: 2px;
 
     &:hover {
         background-color: #00000010 !important;
         color: var(--primary) !important;
-        border-radius: 2px !important;
+        border-radius: 3px !important;
         z-index: 1000 !important;
     }
 }
