changed styles popup, fixed code

--- a/nextgisweb/webmap/nodepkg/identify-module/component/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/component/GraphPanel.less
@@ -43,7 +43,7 @@
     color: var(--text-secondary);
     z-index: 1000;
     border-radius: 3px;
-    border: 1px solid var(--divider-color);
+    border: solid var(--divider-color) 1px;
     background-color: #ffffff00;
     box-sizing: border-box;
     margin-inline-start: 2px;
