--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -121,8 +121,8 @@
         justify-content: space-between;
         align-items: center;
         border-radius: 3px 3px 0 0;
-        background-color: rgba(0, 0, 0, 0.04);
         padding: 0;
+        background: rgba(0, 0, 0, 0.04);
 
         .title-name {
             font-weight: 500;
@@ -157,7 +157,7 @@
             color: var(--text-secondary);
             z-index: 1000;
             border-radius: 3px;
-            border: 1px solid var(--divider-color);
+            border: solid var(--divider-color) 1px;
             background-color: #ffffff00;
             box-sizing: border-box;
             margin-inline-start: 2px;
@@ -180,9 +180,9 @@
             flex: 0 0 auto;
             margin: 0;
             cursor: pointer;
-            color: var(--text-secondary);
-            border: 1px solid var(--divider-color);
-            background: #8d8d8d36;
+            color: var(--divider-color);
+            // border: solid var(--divider-color) 1px;
+            // background: #8d8d8d36;
             box-sizing: border-box;
             pointer-events: none;
             margin-inline-start: 2px;
@@ -318,8 +318,46 @@
         justify-content: space-between;
         align-items: center;
         height: 24px;
-        border-top: solid rgba(0, 0, 0, 0.04) 1px;
-        background: white;
+
+        .footer-coordinate-component {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            justify-content: space-between;
+        
+            .link-block {
+                display: inline-flex;
+                align-items: center;
+        
+                .link-button {
+                    font-size: 16px;
+                    width: 24px;
+                    height: 24px;
+                    display: flex;
+                    justify-items: center;
+                    justify-content: center;
+                    align-items: center;
+                    flex: 0 0 auto;
+                    margin: 0;
+                    cursor: pointer;
+                    color: var(--text-secondary);
+                    z-index: 1000;
+                    border-radius: 3px;
+                    border: none;
+                    border: solid var(--divider-color) 1px;
+                    background-color: #ffffff00;
+                    margin-inline-start: 2px;
+        
+                    &:hover {
+                        background-color: #00000010;
+                        color: var(--primary);
+                        border-radius: 3px;
+                        border: 1px solid var(--divider-color);
+                    }
+                }
+        
+            }
+        }
     }
 }
 
@@ -345,70 +383,21 @@
     }
 }
 
-.footer-coordinate-component {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    justify-content: space-between;
-
-
-
-    .link-block {
-        display: inline-flex;
-        align-items: center;
-
-        .link-button {
-            font-size: 16px;
-            width: 24px;
-            height: 24px;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
-            flex: 0 0 auto;
-            margin: 0;
-            cursor: pointer;
-            color: var(--text-secondary);
-            z-index: 1000;
-            border-radius: 3px;
-            border: none;
-            border: 1px solid var(--divider-color);
-            background-color: #ffffff00;
-            margin-inline-start: 2px;
-
-            &:hover {
-                background-color: #00000010;
-                color: var(--primary);
-                border-radius: 3px;
-                border: 1px solid var(--divider-color);
-            }
-        }
-
-    }
-}
-
 .coordinate-value {
-    padding: 0 5px 0 0;
+    padding: 0;
     cursor: pointer;
-    display: flex;
-    align-items: center;
+    border-radius: 3px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     line-height: normal;
-    height: 24px;
-    border-radius: 0 0 3px 3px;
-
-    &:hover {
-        color: var(--primary);
-        background-color: rgba(0, 0, 0, .02);
-        border-radius: 3px;
-    }
 
     .icon-location {
         padding: 0 5px;
-        font-size: 10px;
     }
 
     .coords {
-        padding: 0;
+        padding: 0 0;
     }
 }
 
@@ -498,4 +487,5 @@
 
 .ant-tag-checkable-checked {
     background-color: #ffffff00;
+    color: var(--primary);
 }
