--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -122,7 +122,6 @@
         align-items: center;
         border-radius: 3px 3px 0 0;
         padding: 0;
-        background: rgba(0, 0, 0, 0.04);
 
         .title-name {
             font-weight: 500;
@@ -157,8 +156,8 @@
             color: var(--text-secondary);
             z-index: 1000;
             border-radius: 3px;
-            border: solid var(--divider-color) 1px;
-            background-color: #ffffff00;
+            border: none;
+            background-color: none;
             box-sizing: border-box;
             margin-inline-start: 2px;
 
@@ -166,6 +165,7 @@
                 background-color: #00000010;
                 color: var(--primary);
                 border-radius: 3px;
+                border: none;
             }
         }
 
@@ -245,6 +245,7 @@
             border-right: solid rgba(0, 0, 0, 0.04) 1px;
             flex-wrap: wrap;
             align-content: space-between;
+            justify-content: center;
 
             .radio-group {
                 overflow: hidden;
@@ -252,10 +253,6 @@
                 .radio-component {
                     overflow: auto;
                     height: auto;
-
-                    .icon-style {
-                        // vertical-align: middle;
-                    }
                 }
             }
 
@@ -324,38 +321,10 @@
             align-items: center;
             width: 100%;
             justify-content: space-between;
-        
+
             .link-block {
                 display: inline-flex;
                 align-items: center;
-        
-                .link-button {
-                    font-size: 16px;
-                    width: 24px;
-                    height: 24px;
-                    display: flex;
-                    justify-items: center;
-                    justify-content: center;
-                    align-items: center;
-                    flex: 0 0 auto;
-                    margin: 0;
-                    cursor: pointer;
-                    color: var(--text-secondary);
-                    z-index: 1000;
-                    border-radius: 3px;
-                    border: none;
-                    border: solid var(--divider-color) 1px;
-                    background-color: #ffffff00;
-                    margin-inline-start: 2px;
-        
-                    &:hover {
-                        background-color: #00000010;
-                        color: var(--primary);
-                        border-radius: 3px;
-                        border: 1px solid var(--divider-color);
-                    }
-                }
-        
             }
         }
     }
@@ -488,4 +457,27 @@
 .ant-tag-checkable-checked {
     background-color: #ffffff00;
     color: var(--primary);
+}
+
+.link-button {
+    font-size: 16px;
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 auto;
+    margin: 0;
+    cursor: pointer;
+    color: var(--text-secondary);
+    z-index: 1000;
+    border: none;
+
+    &:hover {
+        background-color: #00000010;
+        color: var(--primary);
+        border-radius: 3px;
+        border: none;
+    }
 }
