Files for style (added to layer style), displaying files on the map for each layer, enable/disable in the map settings

--- a/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
+++ b/nextgisweb/gui/nodepkg/focus-table/ComplexTree.less
@@ -10,11 +10,11 @@
         > tbody {
             > tr {
                 &:hover {
-                    background-color: var(--color-alter);
+                    background-color: var(--divider-color);
                 }
 
                 &.selected {
-                    background-color: var(--color-active);
+                    background-color: var(--divider-color);
                 }
 
                 > td {
@@ -45,7 +45,7 @@
                             & > div.arrow,
                             & > div.error {
                                 box-sizing: content-box;
-                                padding: 6px 2px 6px 0;
+                                padding: 6px 10px;
                                 height: 16px;
                                 font-size: 16px;
                                 line-height: 1;
