fixed error identify module for relation feature

--- a/nextgisweb/webmap/nodepkg/panel/identification/PanelContentContainer.less
+++ b/nextgisweb/webmap/nodepkg/panel/identification/PanelContentContainer.less
@@ -6,6 +6,15 @@
     width: auto;
     align-items: center;
 
+    .right-graph {
+        display: flex;
+        justify-content: space-between;
+        border-bottom: 1px dotted var(--divider-color);
+        box-sizing: content-box;
+        align-items: center;
+        width: 100%;
+    }
+
     &.margin-all {
         margin: @margin-default;
     }
