--- a/nextgisweb/webmap/nodepkg/identify-module/component/GraphPanel.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/component/GraphPanel.less
@@ -5,12 +5,6 @@
     width: 100%;
 }
 
-.right-graph {
-    display: flex;
-    justify-content: flex-end;
-    border-bottom: 1px dotted var(--divider-color);
-}
-
 .button-graph {
     display: flex;
     justify-content: space-between;
@@ -27,6 +21,12 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+
+    .graph-content {
+        // padding: 1px;
+        // scale: 1;
+        // box-sizing: content-box;
+    }
 }
 
 .legend-hide-button {
