changed map tool selection, search bar styles changed

--- a/nextgisweb/webmap/nodepkg/panel/header/PanelHeader.less
+++ b/nextgisweb/webmap/nodepkg/panel/header/PanelHeader.less
@@ -4,18 +4,23 @@
     border-bottom: 1px solid var(--divider-color);
     padding: 2px;
 
-    > span {
+    >span {
         padding-left: 6px;
         font-weight: var(--ngw-head-font-weight);
         font-size: 15px;
         font-family: var(--ngw-head-font-family-list);
     }
 
-    > .spacer {
+    >.spacer {
         flex-grow: 1;
     }
 
     button {
         color: var(--icon-color);
     }
+}
+
+.alert-desc {
+    background: var(--divider-color);
+    border: 1px solid var(--divider-color);
 }
