--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -352,6 +352,12 @@
     }
 }
 
+.context-coord {
+    display: flex;
+    min-height: 24px;
+    align-items: center;
+}
+
 .coordinate-value {
     padding: 0;
     cursor: pointer;
@@ -410,7 +416,9 @@
         cursor: pointer;
         padding: 5px;
         user-select: none;
-        height: 24px;
+        min-height: 24px;
+        display: flex;
+        align-items: center;
 
         &:hover {
             background-color: #F5F5F5;
