--- a/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
+++ b/nextgisweb/webmap/nodepkg/identify-module/IdentifyModule.less
@@ -366,6 +366,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     line-height: normal;
+    min-height: 24px;
+    display: flex;
+    align-items: center;
 
     .icon-location {
         padding: 0 5px;
