edit style search panel

--- a/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
@@ -18,7 +18,7 @@
         overflow-y: auto;
 
         .alert-desc {
-            background: var(--divider-color);
+            background: rgb(0 0 0 / 3%);
             border: 1px solid var(--divider-color);
             display: flex;
             align-items: flex-end;
