search panel example coordinate info

--- a/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
+++ b/nextgisweb/webmap/nodepkg/panel/search/SearchPanel.less
@@ -18,10 +18,15 @@
         overflow-y: auto;
 
         .alert-desc {
-            background: rgb(0 0 0 / 3%);
-            border: 1px solid var(--divider-color);
+            background: none;
+            border: none;
             display: flex;
             align-items: flex-end;
+            border-radius: 0px;
+        }
+
+        .ant-descriptions.ant-descriptions-bordered>.ant-descriptions-view {
+            border: none;
         }
 
         .result {
