--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureGrid.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureGrid.less
@@ -14,6 +14,11 @@
         }
     }
 
+    .count-feature {
+        font-weight: 600;
+        line-height: 1;
+    }
+
     .ngw-feature-layer-feature-table {
         flex-grow: 1;
     }
