--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -370,8 +370,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .modal-desc-home-page {
-	min-width: 500px;
-	max-width: 75%;
+	padding: 16px;
 
 	.ant-modal-close {
 		position: absolute;
@@ -405,4 +404,3 @@ textarea::-webkit-input-placeholder {
 
 
 }
-
