--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -1,4 +1,3 @@
-
 :root {
 	--ck-color-image-caption-background: hsl(0, 0%, 97%);
 	--ck-color-image-caption-text: hsl(0, 0%, 20%);
@@ -22,6 +21,7 @@
 
 	.ck-content figure {
 		margin: 0;
+		padding: 0 5px;
 	}
 
 	.ck-content table,
