desc component style

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -39,17 +39,12 @@
 		display: block;
 		margin-block-start: 0;
 		margin-block-end: 0;
-		margin-inline-start: 5px;
-		margin-inline-end: 5px;
 	}
 
 	.ck-content .p-padding {
 		display: block;
 		margin-block-start: 0;
 		margin-block-end: 0;
-		margin-inline-start: 5px;
-		margin-inline-end: 5px;
-		margin: 5px;
 	}
 
 	.ck-content .loading {
@@ -115,7 +110,7 @@
 	.ck-content .table table td,
 	.ck-content .table table th {
 		min-width: 2em;
-		padding: .4em;
+		padding: 5px;
 		border: 1px solid hsl(0, 0%, 75%);
 	}
 
