--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -17,6 +17,10 @@
 }
 
 .desc-component {
+	.ck-content {
+		overflow: auto;
+	}
+
 	.ck-content figure {
 		margin: 0;
 		padding: 0 5px;
@@ -730,5 +734,4 @@
 			color: unset;
 		}
 	}
-
 }
