--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -226,6 +226,8 @@
 	box-shadow: none;
 	pointer-events: auto;
 	padding: 18px;
+	min-width: 350px;
+	min-height: 250px;
 }
 
 .ant-modal .ant-modal-close {
