desc layer style web map

--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -62,19 +62,10 @@
 
 	.ck-content .item-description {
 		.title-desc {
-			margin: 5px;
+			color: var(--primary);
 			display: block;
 			font-weight: 500;
-
-			.desc-link {
-				.label-desc {
-					padding: 0 5px;
-				}
-			}
-
-			.label-desc-no {
-				padding: 0 5px;
-			}
+			text-align: end;
 		}
 	}
 
