--- a/nextgisweb/gui/nodepkg/component/text-editor/TextEditor.less
+++ b/nextgisweb/gui/nodepkg/component/text-editor/TextEditor.less
@@ -42,3 +42,27 @@
         }
     }
 }
+
+.image.image-style-align-left {
+    float: left !important;
+    margin-right: 5px !important;
+    max-width: 50% !important;
+}
+
+.image.image-style-align-right {
+    float: right !important;
+    margin-left: 5px !important;
+    max-width: 50% !important;
+}
+
+.image.image-style-block-align-right {
+    margin-left: auto !important;
+    margin-right: 5px !important;
+    max-width: 50% !important;
+}
+
+.image.image-style-block-align-left {
+    margin-left: auto !important;
+    margin-left: 5px !important;
+    max-width: 50% !important;
+}
