--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -1,21 +1,3 @@
-:root {
-	--ck-color-image-caption-background: hsl(0, 0%, 97%);
-	--ck-color-image-caption-text: hsl(0, 0%, 20%);
-	--ck-color-mention-background: hsla(341, 100%, 30%, 0.1);
-	--ck-color-mention-text: hsl(341, 100%, 30%);
-	--ck-color-selector-caption-background: hsl(0, 0%, 97%);
-	--ck-color-selector-caption-text: hsl(0, 0%, 20%);
-	--ck-highlight-marker-blue: hsl(201, 97%, 72%);
-	--ck-highlight-marker-green: hsl(120, 93%, 68%);
-	--ck-highlight-marker-pink: hsl(345, 96%, 73%);
-	--ck-highlight-marker-yellow: hsl(60, 97%, 73%);
-	--ck-highlight-pen-green: hsl(112, 100%, 27%);
-	--ck-highlight-pen-red: hsl(0, 85%, 49%);
-	--ck-image-style-spacing: 1.5em;
-	--ck-inline-image-style-spacing: calc(var(--ck-image-style-spacing) / 2);
-	--ck-todo-list-checkmark-size: 16px;
-}
-
 .desc-component {
 	.ck-content {
 		overflow: auto;
@@ -37,19 +19,6 @@
 			border-collapse: collapse;
 			padding: 0 5px 0 5px;
 		}
-	}
-
-	.ck-content p {
-		display: block;
-		margin-block-start: 0;
-		margin-block-end: 0;
-	}
-
-	.ck-content .p-padding {
-		display: block;
-		margin-block-start: 0;
-		margin-block-end: 0;
-		padding: 5px;
 	}
 
 	.ck-content .loading {
@@ -379,28 +348,6 @@
 		list-style-type: square;
 	}
 
-	/* @ckeditor/ckeditor5-image/theme/imageresize.css */
-	.ck-content img.image_resized {
-		height: auto;
-	}
-
-	/* @ckeditor/ckeditor5-image/theme/imageresize.css */
-	.ck-content .image.image_resized {
-		max-width: 100%;
-		display: block;
-		box-sizing: border-box;
-	}
-
-	/* @ckeditor/ckeditor5-image/theme/imageresize.css */
-	.ck-content .image.image_resized img {
-		width: 100%;
-	}
-
-	/* @ckeditor/ckeditor5-image/theme/imageresize.css */
-	.ck-content .image.image_resized>figcaption {
-		display: block;
-	}
-
 	/* @ckeditor/ckeditor5-image/theme/image.css */
 	.ck-content .image {
 		display: table;
@@ -459,50 +406,63 @@
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-side {
 		float: right;
-		margin-left: var(--ck-image-style-spacing);
+		margin-left: 5px;
 		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-align-left {
 		float: left;
-		margin-right: var(--ck-image-style-spacing);
+		margin-right: 5px;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-align-right {
 		float: right;
-		margin-left: var(--ck-image-style-spacing);
+		margin-left: 5px;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-block-align-right {
 		margin-right: 0;
 		margin-left: auto;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-block-align-left {
 		margin-left: 0;
 		margin-right: auto;
+		max-width: 50%;
+	}
+
+	.ck-content .image.image-style-align-left {
+		float: left;
+		margin-right: 5px;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image-style-align-center {
 		margin-left: auto;
 		margin-right: auto;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image-style-align-left {
 		float: left;
-		margin-right: var(--ck-image-style-spacing);
+		margin-right: 5px;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image-style-align-right {
 		float: right;
-		margin-left: var(--ck-image-style-spacing);
+		margin-left: 5px;
+		max-width: 50%;
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
