--- a/nextgisweb/resource/nodepkg/description/DescComponent.less
+++ b/nextgisweb/resource/nodepkg/description/DescComponent.less
@@ -363,8 +363,8 @@
 	.ck-content .image img {
 		display: block;
 		margin: 0 auto;
-		max-width: 100%;
-		min-width: 100%;
+		max-width: auto;
+		min-width: auto;
 		height: auto;
 	}
 
@@ -409,41 +409,41 @@
 	.ck-content .image.image-style-side {
 		float: right;
 		margin-left: 5px;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-align-left {
 		float: left;
 		margin-right: 5px;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-align-right {
 		float: right;
 		margin-left: 5px;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-block-align-right {
 		margin-right: 0;
 		margin-left: auto;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image.image-style-block-align-left {
 		margin-left: 0;
 		margin-right: auto;
-		max-width: 40%;
+
 	}
 
 	.ck-content .image.image-style-align-left {
 		float: left;
 		margin-right: 5px;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
@@ -456,14 +456,14 @@
 	.ck-content .image-style-align-left {
 		float: left;
 		margin-right: 5px;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
 	.ck-content .image-style-align-right {
 		float: right;
 		margin-left: 5px;
-		max-width: 40%;
+
 	}
 
 	/* @ckeditor/ckeditor5-image/theme/imagestyle.css */
