--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureTable.less
@@ -30,6 +30,23 @@
                     background-color: var(--color-secondary);
                 }
 
+                .button-column {
+                    display: flex;
+                    align-items: center;
+                    
+                    button {
+                        font-size: 14px;
+                        height: 24px;
+                        padding: 0px 0px;
+                        border-radius: 4px;
+                        font-weight: var(--font-weight-strong);
+                    }
+
+                    button:hover {
+                        border-color: var(--primary);
+                    }
+                }
+
                 .label {
                     flex-grow: 1;
                     min-width: 0;
