--- a/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureGrid.less
+++ b/nextgisweb/feature_layer/nodepkg/feature-grid/FeatureGrid.less
@@ -42,7 +42,7 @@
         }
 
         .icon-edit {
-            box-shadow: inset 0px 0px 2px 0px #000000;
+            box-shadow: inset 0px 0px 2px 0px #ff0000;
             border-radius: 3px;
 
             &:hover {
