--- a/nextgisweb/webmap/nodepkg/filter-by-data/FilterByData.less
+++ b/nextgisweb/webmap/nodepkg/filter-by-data/FilterByData.less
@@ -3,12 +3,12 @@
 		display: flex;
 		justify-content: space-between;
 		align-items: flex-end;
-		margin: 16px 0;
+		margin: 0;
 
 		.icon-symbol {
 			font-size: 14px;
-			width: 24px;
-			height: 24px;
+			width: 32px;
+			height: 32px;
 			display: flex;
 			justify-items: center;
 			justify-content: center;
@@ -17,6 +17,7 @@
 			border: 1px solid #d9d9d9;
 			border-radius: 3px;
 			cursor: pointer;
+			box-sizing: border-box;
 
 			&:hover {
 				border: 1px solid var(--primary);
@@ -25,22 +26,23 @@
 		}
 
 		.padding-icon {
-			margin: 0 5px;
+			margin: 0 5px 0 0;
 		}
 
 		.card-row {
 			width: 100%;
-			padding: 0;
-			border: none;
+			margin: 5px;
 
 			.ant-card-head {
-				min-height: 38px;
-				padding: 0 5px 0 16px;
+				min-height: 42px;
+				padding: 0px 5px 0 16px;
 				font-size: 14px;
+				border-radius: 3px;
 			}
 
 			.ant-card-body {
 				padding: 0;
+				margin: 0;
 			}
 
 			.card-content {
@@ -52,13 +54,13 @@
 			}
 		}
 	}
+}
 
-	.control-filters {
-		display: flex;
-		justify-content: flex-end;
+.control-filters {
+	display: flex;
+	justify-content: flex-end;
 
-		button {
-			margin: 0 0 0 10px;
-		}
+	button {
+		margin: 0 0 0 10px;
 	}
 }
