drop-down menu with a button to clear the filter, the name of the map as a button to add a filter field

--- a/nextgisweb/webmap/nodepkg/filter-by-data/FilterByData.less
+++ b/nextgisweb/webmap/nodepkg/filter-by-data/FilterByData.less
@@ -29,13 +29,21 @@
 			margin: 0 5px 0 0;
 		}
 
+		.title-button {
+			min-height: 24px;
+			width: 100%;
+			display: flex;
+			padding: 5px 16px;
+			align-items: center;
+			cursor: pointer;
+		}
+
 		.card-row {
 			width: 100%;
 			margin: 5px;
 
 			.ant-card-head {
-				min-height: 42px;
-				padding: 0px 5px 0 16px;
+				padding: 0;
 				font-size: 14px;
 				border-radius: 3px;
 			}
