--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -1,44 +1,82 @@
 .ngw-filter-layer {
-    .filter-container {
-        width: 100%;
-        height: 100%;
-        justify-content: space-between;
-        border-radius: 3px;
-        box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
-        position: absolute;
-        content: "";
-        display: flex;
-        clear: both;
-        flex-direction: column;
-        background: #fff;
-        border: 1px solid var(--icon-color);
-        box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+    border-radius: 3px;
+    box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
+    position: absolute;
+    content: "";
+    display: flex;
+    clear: both;
+    flex-direction: column;
+    background: #fff;
+    box-sizing: border-box;
 
-        .icon-symbol {
-            font-size: 16px;
-            width: 24px;
-            height: 24px;
-            display: flex;
-            justify-items: center;
-            justify-content: center;
-            align-items: center;
-            flex: 0 0 auto;
-            margin: 0;
-            cursor: pointer;
-            color: var(--text-secondary);
-            z-index: 1000;
+    .ant-tabs-nav .ant-tabs-tab {
+        border-radius: 3px 3px 0 0 !important;
+    }
+
+    .ant-tabs-card > .ant-tabs-nav {
+        border-bottom: 1px solid var(--divider-color);
+    }
+
+    .ant-tabs-content-holder {
+        border-radius: 3px;
+        cursor: auto;
+    }
+
+    .op-button {
+        padding: 0 4px;
+        width: 106px;
+    }
+
+    .op-button-collapse {
+        display: flex;
+        padding: 0;
+        position: fixed;
+        top: 1px;
+        right: 4px;
+        width: 132px;
+        height: 38px;
+        background: #fff;
+        z-index: 1;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .icon-filter {
+        font-size: 16px;
+        width: 32px;
+        height: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .icon-symbol {
+        font-size: 16px;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        justify-items: center;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 auto;
+        margin: 0;
+        cursor: pointer;
+        color: var(--text-secondary);
+        z-index: 1000;
+        border-radius: 3px;
+        border: none;
+        background-color: none;
+        box-sizing: border-box;
+        margin-inline-start: 2px;
+
+        &:hover {
+            background-color: #00000010;
+            color: var(--primary);
             border-radius: 3px;
             border: none;
-            background-color: none;
-            box-sizing: border-box;
-            margin-inline-start: 2px;
-
-            &:hover {
-                background-color: #00000010;
-                color: var(--primary);
-                border-radius: 3px;
-                border: none;
-            }
         }
     }
 }
