--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -42,6 +42,7 @@
         z-index: 1;
         align-items: center;
         justify-content: space-between;
+        cursor: auto;
     }
 
     .icon-filter {
