eslin fix error, delete title icon feature item, fix tree layers dropdown button....

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -3,7 +3,7 @@
         padding: 0;
 
         &.ant-tree-treenode-selected {
-            background-color: #e6f0f800;
+            background-color: #e6f0f8;
         }
     }
 
