--- a/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
+++ b/nextgisweb/webmap/nodepkg/filter-layer/FilterLayer.less
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     justify-content: space-between;
-    border-radius: 3px;
+    border-radius: 2px;
     box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
     position: absolute;
     content: "";
@@ -12,50 +12,105 @@
     background: #fff;
     box-sizing: border-box;
 
-    .ant-tabs-nav .ant-tabs-tab {
-        border-radius: 3px 3px 0 0 !important;
+    .ant-tabs-content-holder {
+        margin-left: 0;
     }
 
-    .ant-tabs-card > .ant-tabs-nav {
-        border-bottom: 1px solid var(--divider-color);
+    .ant-tabs-nav .ant-tabs-tab {
+        border-radius: 0 !important;
+        padding: 3px 6px !important;
+        font-size: 12px !important;
+        display: inline-flex;
+        justify-content: space-between;
+        border-right: 1px solid var(--divider-color);
+        border-top: none;
+        border-bottom: none;
+        border-left: none;
+    }
+
+    .ant-tabs-card>.ant-tabs-nav {
+        align-items: flex-start;
     }
 
     .ant-tabs-content-holder {
-        border-radius: 3px;
+        border-radius: 2px;
         cursor: auto;
     }
 
+    .ant-tabs-card > .ant-tabs-content-holder {
+        border: 0px solid rgba(0, 0, 0, 0.06);
+    }
+
+    .ant-tabs-nav {
+        min-width: 0;
+    }
+
+    .ant-card {
+        border-radius: 2px;
+    }
+
+    .ant-card-bordered {
+        border: 0px solid #f0f0f0;
+    }
+
+    .ant-card-head {
+        min-height: 30px;
+        padding: 0;
+        font-size: 14px;
+    }
+
+    .ant-card-body {
+        padding: 0;
+        height: 100%;
+        position: relative;
+        width: 100%;
+    }
+
     .op-button {
-        padding: 0 4px;
-        width: 106px;
+        padding: 0;
+        display: flex;
+        justify-content: space-between;
+        width: 150px
     }
 
     .op-button-collapse {
         display: flex;
         padding: 0;
-        position: fixed;
-        top: 1px;
-        right: 4px;
-        width: 132px;
-        height: 38px;
+        position: relative;
+        top: 0px;
+        width: 30px;
+        height: 30px;
         background: #fff;
         z-index: 1;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         cursor: auto;
+        border-radius: 2px;
     }
 
+    .ant-btn.ant-btn-icon-only {
+        width: 30px;
+        height: 30px;
+        color: var(--primary);
+
+        &:hover {
+            border-radius: 2px;
+            color: var(--primary);
+        }
+    }
+
+
     .icon-filter {
-        font-size: 16px;
-        width: 32px;
-        height: 32px;
+        font-size: 14px;
+        width: 24px;
+        height: 24px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
     .icon-symbol {
-        font-size: 16px;
+        font-size: 14px;
         width: 24px;
         height: 24px;
         display: flex;
@@ -67,7 +122,7 @@
         cursor: pointer;
         color: var(--text-secondary);
         z-index: 1000;
-        border-radius: 3px;
+        border-radius: 2px;
         border: none;
         background-color: none;
         box-sizing: border-box;
@@ -76,8 +131,17 @@
         &:hover {
             background-color: #00000010;
             color: var(--primary);
-            border-radius: 3px;
+            border-radius: 2px;
             border: none;
         }
     }
+
+
+    .filter-content {
+        height: 100%;
+        width: 100%;
+        border: 1px solid var(--divider-color);
+        box-sizing: border-box;
+    }
+
 }
