--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -25,7 +25,7 @@
         top: initial;
         margin-inline-end: 0px;
         align-self: flex-start;
-        margin-top: 4px;
+        margin-top: 7px;
     }
 
     .ant-tree-node-content-wrapper {
@@ -33,7 +33,8 @@
         width: 100%;
         min-width: 0;
         align-items: center;
-
+        min-height: 30px;
+        line-height: 30px;
         &:hover {
             background: transparent;
         }
@@ -58,6 +59,8 @@
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 display: flex;
+                align-items: center;
+                justify-content: space-between;
 
                 .legend-title {
                     overflow: hidden;
@@ -135,7 +138,7 @@
     display: flex;
     outline: none;
     padding: 0;
-    margin: 3px 0;
+    margin: 0;
 }
 
 .iconCustom {
